# AngryDolphinEngine

./: .gitignore  CMakeLists.txt  README.txt
codegen/: component_builder.py  component_schema_format.txt
config/: CMakeLists.txt  component_registry.h  config.h.in.txt  core_components.h  engine_components.h
core/: CMakeLists.txt
core/definitions/: CMakeLists.txt
core/definitions/graphics/: renderer.h
core/definitions/scene/: scene_entity_instantiator.h  scene_service.h
core/definitions/transform/: transform_service.h
core/ecs/: CMakeLists.txt  Header1.h  archetype.h  component_array.h  ecs.h  entity.cpp  entity.h  registry.h  system.h
core/ecs/tests/: CMakeLists.txt  archetype_test.cpp  ecs_test.cpp
core/ecs/tests/archetype_tests/: CMakeLists.txt  archetype_test.cpp
core/ecs/tests/registry_tests/: CMakeLists.txt  ecs_test.cpp
core/game/: CMakeLists.txt  game.cpp  game.h
core/geometry/: CMakeLists.txt  bounds.cpp  bounds.h  line2d.cpp  line2d.h  rect.cpp  rect.h
core/graphics/: CMakeLists.txt  Header6.h  material.cpp  material.h  material_manager.cpp  material_manager.h  mesh.cpp  mesh.h  mesh_manager.cpp  mesh_manager.h  mesh_renderable.h  opengl_renderer.cpp  opengl_renderer.h  renderer.h  rendering_pipeline.cpp  rendering_pipeline.h  rendering_pipeline_manager.cpp  rendering_pipeline_manager.h  rendering_system.cpp  rendering_system.h  skeletal_mesh_renderable.h
core/graphics/components/: camera_component.h  mesh_renderable_component.h  skeletal_mesh_renderable_component.h
core/graphics/shader/: shader.cpp  shader.h
core/graphics/shader/codegen/: shader_language_grammar.txt  shader_var_interpreter.py
core/graphics/shader/shader_vars/: shader_data_type.h  shader_var_helpers.cpp  shader_var_helpers.h
core/graphics/shader/shader_vars/codegen/: shader_var_interpreter.py
core/graphics/shader/shader_vars/something_shader/: vars.h
core/graphics/systems/: mesh_transformation_system.cpp  mesh_transformation_system.h  rendering_system.cpp  rendering_system.h
core/graphics/tests/: CMakeLists.txt  rendering_pipeline_test.cpp
core/math/: CMakeLists.txt
core/object/: object.h
core/resource_manager/: CMakeLists.txt  resource_manager.cpp  resource_manager.h
core/resources/: CMakeLists.txt  file_utils.h  resource_manager.cpp  resource_manager.h
core/rtti/: CMakeLists.txt  runtime_type_registry.h
core/scene/: CMakeLists.txt  scene.cpp  scene.h  scene_graph.cpp  scene_graph.h  scene_manager.cpp  scene_manager.h  simple_scene.h
core/scene/interfaces/: transform_graph.h
core/serialize/: CMakeLists.txt  archive.h  archive_des_node.h  archive_node.h  archive_ser_node.h  deserializable.h  serdes_utils.h  serializable.h  serialization_utils.h  variable.h  xml_serializer.h
core/serialize/stl_builders/: stl_string_builder.cpp  stl_string_builder.h
core/serialize/tests/: CMakeLists.txt  serialize_test_objects.h  serialize_tests.cpp
core/services/: CMakeLists.txt  service_container.h
core/simulation/: CMakeLists.txt  physics_interpolation_system.h  physics_system.h  rigidbody_component.h  rigidbody_system.cpp  rigidbody_system.h
core/transform/: CMakeLists.txt  transform.cpp  transform.h  transform_tree.h  transform_utils.h
core/utils/: CMakeLists.txt  bounds.h  event_announcer.h  file_utils.h  non_reusable_uid_generator.h  orthtree.h  reusable_uid_generator.h  set_trie.h  shared_handle.h  smart_array.cpp  smart_array.h  transform_utils.h  type_id_mapper.h  type_info.h  uid_generator.cpp  uid_generator.h
core/utils/tests/: CMakeLists.txt  set_trie_test.cpp
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/ecs/: CMakeLists.txt  archetype.h  component.cpp  component.h  ecs.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  system.h  system_manager.h  type_id_generator.h  typeid_generator.h  uid_generator.h
engine/core/ecs/tests/: CMakeLists.txt  archetype_test.cpp  ecs_test.cpp
engine/core/game/: CMakeLists.txt  game.cpp  game.h
engine/core/graphics/: CMakeLists.txt  camera.h  glfw_window_wrapper.cpp  glfw_window_wrapper.h  material.h  material_manager.cpp  material_manager.h  mesh.cpp  mesh.h  mesh_renderable.h  mesh_renderer.h  model.h  opengl_renderer.cpp  opengl_renderer.h  render_context.h  renderer.h  rendering_pipeline.cpp  rendering_pipeline.h  rendering_pipeline_manager.cpp  rendering_pipeline_manager.h  rendering_system.h  shader.cpp  shader.h
engine/core/graphics/shader/: shader.cpp  shader.h  shader_var.h  uniform.cpp  uniform.h
engine/core/graphics/shader/shader_data_type_assigner/: shader_data_type_assigner.h
engine/core/graphics/shader/shader_data_types/: shader_data_type.h
engine/core/graphics/shader/shader_vars/: shader_data_type.h  shader_var_custom_struct.cpp  shader_var_custom_struct.h  shader_var_float.cpp  shader_var_float.h  shader_var_helpers.cpp  shader_var_helpers.h
engine/core/object/: CMakeLists.txt  object.h
engine/core/simulation/: physics_interpolation_system.h  physics_system.cpp  physics_system.h  rigidbody.h  time_stepper.h
engine/core/transform/: CMakeLists.txt  transform.h  transform_utils.h
engine/core/utils/: CMakeLists.txt  file_helpers.h  gtest_helpers.h  rect.cpp  rect.h  set_trie.h  typeid_generator.cpp  typeid_generator.h  uid_generator.h
engine/core/utils/tests/: CMakeLists.txt  set_trie_test.cpp
example_game/: CMakeLists.txt
example_game/my_scenes/: CMakeLists.txt  simple_scene.h
example_game/resources/standard_rendering_pipeline/: standard.txt  standard.xml
example_game/src/: CMakeLists.txt  main.cpp
modules/: CMakeLists.txt
modules/pathfinding/: AABB.h  CMakeLists.txt  NavigableSurfaceRegistry.cpp  NavigableSurfaceRegistry.h  NavigationMesh.cpp  NavigationMesh.h  Quadtree.cpp  Quadtree.h
modules/pathfinding/tests/: CMakeLists.txt  pathfinding_test.cpp
test_game/: CMakeLists.txt
test_game/src/: main.cpp
